LI added QAGUI (WP3)

--- a/doc/D53/D53.tex
+++ b/doc/D53/D53.tex
@@ -104,4 +104,6 @@ The copyright in this document is the property of the COACHES Consortium. This d
 
 \input{D53_comm}
 
+\input{D53_design}
+
 \end{document}
