--- a/doc/D53/D53_comm.tex
+++ b/doc/D53/D53_comm.tex
@@ -1,4 +1,15 @@
 \section{Communication Infrastructure}
 
+2 Bananas and 1 Laptop run ROS (1 roscore master and 2 slaves)
+
+USB connected devices (robot, laser, cameras) -> Banana: thin\_drivers for data acquisition
+
+Ethernet connection: laptop and bananas use ROS middleware
+
+Ethernet connection: tablet - laptop uses TCP (TCP interface to connect external processes with ROS)
+
+Wireless connection: external device - laptop uses TCP interface
+
+
 
 
