--- a/doc/D53/D53_robots.tex
+++ b/doc/D53/D53_robots.tex
@@ -1,2 +1,46 @@
 \section{Robot Set-up}
 
+
+\subsection{Robot Hardware}
+
+Hardware configuration for each robot:
+
+
+Robot base: Segway RMP210
+
+Laser: Hokuyo URG-04LX-UG01,  UTM-30-LX
+
+Cameras: 2 ASUS Xtion pro Live, Logitech C920
+
+Speakers:
+
+Microphone: Microphone RODE NTG-2  (directional microphone) ...
+
+PC laptop: HP EliteBook 820 G2
+
+Tablet: Microsoft Surface Pro 2
+
+SBC: 2 Banana PI
+
+Network switch for internal communication and external wireless communication
+
+
+\subsection{Device Connections}
+
+Robot, 2 Laser, 3 Cameras -USB- 2 Bananas
+
+2 Bananas -Ethernet- Net Switch
+
+Laptop, Tablet -Ethernet- Net Switch
+
+Microphone -USB- Tablet
+
+Speakers -audio jack- Tablet
+
+External devices -Wireless- Net switch
+
+
+
+
+
+
