--- a/doc/D53/D53_comm.tex
+++ b/doc/D53/D53_comm.tex
@@ -1,14 +1,11 @@
 \section{Communication Infrastructure}
 
-2 Bananas and 1 Laptop run ROS (1 roscore master and 2 slaves)
+general overview od communication infrastructures for robot-robot and robot-external device communicatins....
 
-USB connected devices (robot, laser, cameras) -> Banana: thin\_drivers for data acquisition
 
-Ethernet connection: laptop and bananas use ROS middleware
+\subsection{TCP Interface}
 
-Ethernet connection: tablet - laptop uses TCP (TCP interface to connect external processes with ROS)
 
-Wireless connection: external device - laptop uses TCP interface
 
 
 
