--- a/doc/D53/D53.tex
+++ b/doc/D53/D53.tex
@@ -14,6 +14,8 @@
 
 \usepackage{url}
 
+\usepackage{multirow}
+
 %\renewcommand{\title}[1]{\sbox{\notetitle}{\Large{\textbf{#1}}}}
 %\renewcommand{\author}[1]{\renewcommand{\and}{\quad}\sbox{\noteauthor}{\large{#1}}}
 \renewcommand{\title}[1]{\sbox{\notetitle}{\begin{minipage}{1.0\textwidth} \begin{center} \Large{\textbf{#1}} \end{center}\end{minipage} }}
