--- a/doc/D53/D53_design.tex
+++ b/doc/D53/D53_design.tex
@@ -2,13 +2,13 @@
 
 The design of the COACHES robots has been carried out within a study made by
 the designer Roberto Tino\footnote{www.robertotino.com}, during a collaboration
-with Dept. of Computer, Control and Management Engineering Sapienza University of Rome, Italy
+with Dept. of Computer, Control and Management Engineering Sapienza University of Rome, Italy.
 
 
 The designed robot model has been called ALFRED and the main design concept has been developed for the need of deploying a social robot in public environments (such as, shopping malls) with the purpose of assisting people that need for help or
 information, guiding them to a certain location, etc.
 
-The main results of the design are eported in the following of this section.
+The main results of the design are reported in the following of this section.
 
 
 \subsection{Motivation and design goals}
@@ -39,13 +39,12 @@ that aims at developing autonomous social robots operating in a shopping mall in
 performing short-term interactions with shop-keepers and customers of the mall.
 Moreover, given the actual goal of fully producing two of these robots to be deployed in a real shopping
 mall, architectural and functional limits derived by limited budget have been carefully considered.
-The two robots are under development from Algorithmica S.r.l. (algorithmica.it) company and will be
-probably finished by the conference date and available for the presentation.
+The two robots are under development from Algorithmica S.r.l.\footnote{http://algorithmica.it} company and they are expected to be delivered in Fall 2015.
 
 \subsection{Design concepts}
 
 ALFRED is a social robot designed to operate in public environments populated by many non-expert users.
-Its main purpose is to assist people that needs for help or information, guide them or bring them to a certain
+Its main purpose is to assist people that ask for help or information, need to be guided to a certain
 location, as well as to advertise items and goods as provided by shop-keepers.
 As being in front of something that looks human but is not human can instill dread to the user, we chose not
 to use an anthropomorphic shape for the robot.
